<resources>
    <string name="app_name">Boiler Controller</string>

    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="boostTemperature">Boost temperature (1–6)</string>
    <string name="boostDuration">Boost duration (min)</string>
    <string name="minutes">Minutes</string>
    <string name="channel_name">Normal</string>
    <string name="channel_description">Normal notifications</string>
    <string name="desired_temperature">Desired temp</string>
    <string name="current_temperature">Current temp</string>
    <string name="last_synchronization">Last sync</string>
    <string name="boost_active_till">Boost active till:</string>
    <string name="delete_boost">delete boost</string>
    <string name="email_address">Email address</string>
    <string name="delete_temperature_config">Delete temperature config</string>
    <string name="edit_temperature_config">Edit temperature config</string>

</resources>
